--- a/src/busnessAnalyst_1.html
+++ b/src/busnessAnalyst_1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Career Club</title>
+    <title>Business Analyst_1</title>
 
     <!-- --------------- Google Fonts -------------- -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
