student Career CLub responsive done

--- a/src/studentCareerClub.html
+++ b/src/studentCareerClub.html
@@ -68,7 +68,7 @@
                     <p class="pr-md-4 mr-md-1 py-4 aboutUsBannerDescription">90% of our graduates get hired within 3 months of work experience program completion and receive an average salary of £26,322 per annum.
                     </p>
                 </div>
-                <div class="col-md-6 mt-md-5 pl-md-5">
+                <div class="col-md-6 mt-md-5 pl-md-5 pb-3 pb-md-0">
                     <img class="img-fluid" src="images/student_1.png" alt="student_1">
                 </div>
             </div>
@@ -130,8 +130,8 @@
             <!-- ===================How our partner recruiters================= -->
             <div class="row ml-0">
                <div class="partnerRecruiters">
-                <h1 class="text-center pt-md-5 mt-lg-5 mb-4">Join the <span class="colorText"> 90% </span> of  <span class="colorText"> Techway Placements' graduates </span> that have secured their jobs and are thriving in their roles. </h1>
-                <div class="buttonControll text-center">
+                <h1 class="text-center pt-md-5 mt-3 mt-lg-5 mb-4">Join the <span class="colorText"> 90% </span> of  <span class="colorText"> Techway Placements' graduates </span> that have secured their jobs and are thriving in their roles. </h1>
+                <div class="buttonControll text-center mb-5">
                     <button class="btn button mt-4">Contact Us</button>
                 </div>
             </div>
