Why hire our graduates responsive done

--- a/src/WhyHireOurGraduates.html
+++ b/src/WhyHireOurGraduates.html
@@ -67,7 +67,7 @@
                     <h2 class="pr-md-4 mr-md-1 mt-4 mt-sm-0"> Why <span class="colorText">hire </span>  our graduates? </h2>
                     <p class="pr-md-4 mr-md-1 py-2 aboutUsBannerDescription">Looking for your next great hires? Have exclusive access to our pool of graduates and fill your open positions with talents that can bring proven skills set and value to your company.
                     </p>
-                    <button class="btn button mt-4">See prospective employees</button>
+                    <button class="btn button my-4">See prospective employees</button>
                 </div>
                 <div class="col-md-6 mt-md-5 pl-md-5">
                     <img class="img-fluid" src="images/graduatesBanner.png" alt="about us Banner">
@@ -79,25 +79,25 @@
     <section id="employmentMarket" class="aboutUs realValueCards">
         <div class="container extraPadding"> 
             <!-- ========================= employment market Down Part End ==================== -->
-            <h1 class="text-center pb-md-5 pt-md-5 mt-lg-5 mb-4">Know the real <span class="colorText">value </span> our graduates 
+            <h1 class="text-center pb-md-5 pt-md-5 mt-3 mt-lg-5 mb-4">Know the real <span class="colorText">value </span> our graduates 
               <br class="d-none d-md-block">  can bring to your company.</h1>
             <div class="row ml-0">
                 
                 <div class="card-deck">
                     <div class="card py-4 px-3">
-                      <div class="card-body">
+                      <div class="card-body graduatesCardBodyCtrl">
                         <h5 class="card-title">Job-Ready</h5>
                         <p class="card-text">Develop thorough knowledge of key accounting procedures and principles. Gain deep experience preparing financial statements, managing accounts, preparing reports, and conducting other complementary responsibilities.</p>
                       </div>
                     </div>
                     <div class="card py-4 px-3">
-                      <div class="card-body">
+                      <div class="card-body graduatesCardBodyCtrl">
                         <h5 class="card-title">Relevant Experience</h5>
                         <p class="card-text">Our graduates have relevant work experience in the role you are recruiting for. They know how to approach processes, address unique industry issues, and adapt to changes. </p>
                       </div>
                     </div>
                     <div class="card py-4 px-3">
-                      <div class="card-body">
+                      <div class="card-body graduatesCardBodyCtrl">
                         <h5 class="card-title">Fresh Perspectives</h5>
                         <p class="card-text">Hiring our graduates can bring new ways of thinking in your workplace. Fresh outlook and ideas can mean new opportunities for your company.</p>
                       </div>
@@ -106,19 +106,19 @@
 
                   <div class="card-deck mt-md-5">
                     <div class="card py-4 px-3">
-                      <div class="card-body">
+                      <div class="card-body graduatesCardBodyCtrl">
                         <h5 class="card-title">Flexibility</h5>
                         <p class="card-text">The average 20-something most likely don’t have pre-formed work habits and practices and have lesser personal obligations. This makes our graduates open to adapting to your working hours, office culture, and work procedures.</p>
                       </div>
                     </div>
                     <div class="card py-4 px-3">
-                      <div class="card-body">
+                      <div class="card-body graduatesCardBodyCtrl">
                         <h5 class="card-title">Work Initiative</h5>
                         <p class="card-text">Having exposure to the world of work gives our graduates the chance to know what it’s like out there. They understand that initiative will take them further, so they will work their hardest to prove themselves and take on tasks to help them progress.</p>
                       </div>
                     </div>
                     <div class="card py-4 px-3">
-                      <div class="card-body">
+                      <div class="card-body graduatesCardBodyCtrl">
                         <h5 class="card-title">Tech Savviness</h5>
                         <p class="card-text">Making the best use of technology as part of their work experience, our graduates have the ability to rapidly pick up new technologies and tools. This puts them in a good position to swiftly learn any software necessary for the job.</p>
                       </div>
@@ -147,7 +147,7 @@
             <div class="col-md-5 mt-md-5">
                <p class="pb-5">Please fill out the form below to have access to our graduates and hire any one of them for your full-time positions.</p>
 
-               <form class="graduatesFromControl">
+               <form class="graduatesFromControl mb-5 mb-md-0">
                 <div class="row">
                   <div class="col">
                     <input type="text" class="form-control" placeholder="First name" required>
