Our promise responsive done

--- a/src/ourPromise.html
+++ b/src/ourPromise.html
@@ -83,21 +83,21 @@
               <br class="d-none d-md-block">  can bring to your company.</h1> -->
             <div class="row ml-0 mt-md-5 pt-md-5">
                 
-                <div class="card-deck">
+                <div class="card-deck mt-4 mt-md-0">
                     <div class="card py-4 px-3">
-                      <div class="card-body">
-                        <h5 class="card-title">High-performing candidates</h5><br>
+                      <div class="card-body promiseCardRes">
+                        <h5 class="card-title">High-performing candidates</h5><br class="d-none d-md-block">
                         <p class="card-text">All candidates who complete our work experience programs are well prepared to start their careers. They are equipped with the right industry experience and skills that will ensure they can bring real value to your company. </p>
                       </div>
                     </div>
                     <div class="card py-4 px-3">
-                      <div class="card-body">
+                      <div class="card-body promiseCardRes">
                         <h5 class="card-title">Permission for <br> representation</h5>
                         <p class="card-text">The candidates we forward to prospective employers have given their permission to us for representation. This means we are allowed to submit their details and forward their application to open positions where their skills fit. </p>
                       </div>
                     </div>
                     <div class="card py-4 px-3">
-                      <div class="card-body">
+                      <div class="card-body promiseCardRes">
                         <h5 class="card-title">Valid <br> references</h5>
                         <p class="card-text">In the event that you have chosen candidates for interview, we can ask for references from them, if you require. These references should help validate a candidate’s skills, experience and job-readiness. </p>
                       </div>
@@ -106,19 +106,19 @@
 
                   <div class="card-deck mt-md-5">
                     <div class="card py-4 px-3">
-                      <div class="card-body">
-                        <h5 class="card-title">Information confidentiality</h5><br>
+                      <div class="card-body promiseCardRes">
+                        <h5 class="card-title">Information confidentiality</h5><br class="d-none d-md-block">
                         <p class="card-text">Whatever information you provide to us, we will make sure to keep it confidential, unless you agree to its disclosure. This is one way of demonstrating our commitment to protect your information as our partner for providing employment.</p>
                       </div>
                     </div>
                     <div class="card py-4 px-3">
-                      <div class="card-body">
+                      <div class="card-body promiseCardRes">
                         <h5 class="card-title">Swift <br> Turnaround</h5>
                         <p class="card-text">As we already have a steady pool of graduates, we can immediately forward candidates qualified for the roles you trying to fill straight to your inbox. This means no complicated recruitment and long waiting time.</p>
                       </div>
                     </div>
                     <div class="card py-4 px-3">
-                      <div class="card-body">
+                      <div class="card-body promiseCardRes">
                         <h5 class="card-title">Top-notch <br> support</h5>
                         <p class="card-text">Aside from being transparent about the candidates we forward and making our processes accessible, we deliver support at every stage of recruitment. Our team will also keep you informed on the progress of your sourcing.</p>
                       </div>
@@ -147,7 +147,7 @@
             <div class="col-md-5 mt-md-5">
                <p class="pb-5">Please fill out the form below to have access to our graduates and hire any one of them for your full-time positions.</p>
 
-               <form class="graduatesFromControl">
+               <form class="graduatesFromControl mb-5">
                 <div class="row">
                   <div class="col">
                     <input type="text" class="form-control" placeholder="First name" required>
