Employer Expreience responsive done

--- a/src/employerExperience.html
+++ b/src/employerExperience.html
@@ -79,7 +79,7 @@
             <div class="row ml-0">
                 <div class="col-12 mt-md-5">
                     <div class="row mr-1 d-flex justify-content-center peopleControlInExperience">
-                        <div class="col-12 col-10 p-5 aboutUsPeopleControl">
+                        <div class="col-12 col-10 p-md-5 p-4 aboutUsPeopleControl">
                             <p class="pl-3">“We are glad to have made the decision to hire graduates from Techway Placements for our some of our entry-leve tech roles. Having acquired relevant hands-on experience and skills, they were able to immediately start their work with us with minimal training and learning curve needed.”</p>
                            <div class="peopleNameControl pt-4 pl-3">
                             <h5 class="peopleNameExperience">Georgina Higgins</h5>
@@ -98,9 +98,9 @@
             <!-- <h1 class="text-center pb-md-5 pt-md-5 mt-lg-5 mb-4">Know the real <span class="colorText">value </span> our graduates 
               <br class="d-none d-md-block">  can bring to your company.</h1> -->
             <div class="row ml-0">
-                <div class="col-12 mt-md-5">
+                <div class="col-12 mt-md-5 mt-5">
                     <div class="row mr-1 d-flex justify-content-center peopleControlInExperience">
-                        <div class="col-12 col-10 p-5 aboutUsPeopleControl aboutPeopleControlExtra">
+                        <div class="col-12 col-10 p-4 p-md-5 aboutUsPeopleControl aboutPeopleControlExtra">
                             <p class="pl-3">“Hiring graduates from Techway Placements made recruitment easier for us. We were able to have experienced candidates filling out our vacancies in less than 3 weeks, which allowed us to move forward with our projects on schedule. Also, because the candidates already have the grounding and experience in what we do, we didn’t need to invest a lot of time teaching them the ropes of the job. They managed to perform their roles with minimal supervision.”</p>
                            <div class="peopleNameControl pt-4 pl-3">
                             <h5 class="peopleNameExperience">Brian West</h5>
@@ -119,9 +119,9 @@
             <!-- <h1 class="text-center pb-md-5 pt-md-5 mt-lg-5 mb-4">Know the real <span class="colorText">value </span> our graduates 
               <br class="d-none d-md-block">  can bring to your company.</h1> -->
             <div class="row ml-0">
-                <div class="col-12 mt-md-5">
+                <div class="col-12 mt-md-5 mt-5">
                     <div class="row mr-1 d-flex justify-content-center peopleControlInExperience">
-                        <div class="col-12 col-10 p-5 aboutUsPeopleControl aboutPeopleControlExtra">
+                        <div class="col-12 col-10 p-md-5 p-4 aboutUsPeopleControl aboutPeopleControlExtra">
                             <p class="pl-3">“We were able to avoid the hassle and expensive fees associated with working with recruiters and posting on job boards. We simply approach Techway Placements with our hiring requirements and they forwarded qualified candidates to us. From there, were able to conduct some interviews and eventually hired 2 graduates who are now proactive members and contributors in their respective teams. It was great working with Techway Placements.”</p>
                            <div class="peopleNameControl pt-4 pl-3">
                             <h5 class="peopleNameExperience">Eli Dunham</h5>
@@ -153,7 +153,7 @@
             <div class="col-md-5 mt-md-5">
                <p class="pb-5">Please fill out the form below to have access to our graduates and hire any one of them for your full-time positions.</p>
 
-               <form class="graduatesFromControl">
+               <form class="graduatesFromControl mb-5">
                 <div class="row">
                   <div class="col">
                     <input type="text" class="form-control" placeholder="First name" required>
