Recruters Responsive done

--- a/src/Recruiters.html
+++ b/src/Recruiters.html
@@ -86,20 +86,20 @@
                 
                 <div class="card-deck">
                     <div class="card py-4 px-3">
-                      <div class="card-body">
-                        <h5 class="card-title">Access talented <br class="d-none d-md-block"> graduates</h5><br>
+                      <div class="card-body recrutesCardRes">
+                        <h5 class="card-title">Access talented <br class="d-none d-md-block"> graduates</h5>
                         <p class="card-text">Have a steady pipeline of candidates that you can readily forward for entry-level tech roles.
                             Graduates from our programs have valuable work experience to show as well as qualifications that employers are looking for. With those, they are eager to get their start in the world of work and are prepared to hit the ground running.</p>
                       </div>
                     </div>
                     <div class="card py-4 px-3">
-                      <div class="card-body">
+                      <div class="card-body recrutesCardRes">
                         <h5 class="card-title">Careful <br class="d-none d-md-block"> vetting</h5>
                         <p class="card-text">When it comes to verification, requesting for a copy of a candidate’s CV is no longer enough for us. To get into any of our work experience program, our team conducts an interview. This enables us to know if candidates are suited for the program they are trying to get in and if they have the necessary skills to succeed. </p>
                       </div>
                     </div>
                     <div class="card py-4 px-3">
-                      <div class="card-body">
+                      <div class="card-body recrutesCardRes">
                         <h5 class="card-title">Unambiguous <br class="d-none d-md-block"> Communication</h5>
                         <p class="card-text">When you become a partner recruiter of Techway Placements, rest assured that we will communicate with you consistently. We will share the information you need about the graduates we have on board and at the same time relay the job positions you are hiring for. This ensures we are able to help candidates from both sides.</p>
                       </div>
@@ -153,7 +153,7 @@
             
             <div class="row ml-0">
                 <div class="partnerRecruiters">
-                 <h1 class="text-center pt-md-5 mt-lg-5 mb-4">Recruit <span class="colorText"> great entry-level </span> candidates</h1>
+                 <h1 class="text-center pt-md-5 mt-3 mt-lg-5 mb-4">Recruit <span class="colorText"> great entry-level </span> candidates</h1>
                  <p class="text-center">Join our growing network of partner recruiters. Have a steady pipeline of qualified and eager-to-work candidates by gaining access to our pool of graduates. Help candidates secure the right roles for their skills and meet your clients’ hiring needs.
                  </p>
                  <p class="text-center">Complete the form below to register as Experiencely recruiter partner.</p>
