busneess analytics responsive done

--- a/src/BusinessAnalyst.html
+++ b/src/BusinessAnalyst.html
@@ -63,13 +63,13 @@
             
             <div class="row employDown mt-lg-4 pt-md-4 aboutUs_1">
                <div class="row exception">
-                <div class="col-md-6 employDownRight p-5 businessBannerLeft">
+                <div class="col-md-6 employDownRight p-4 p-md-5 businessBannerLeft">
                     <h2 class="pr-md-4 mr-md-1 mt-4 mt-sm-0"><span class="colorText">Business Analysis</span> Work
                         <span class="d-block">Experience Program</span> </h2>
-                    <p class="pr-md-4 mr-md-1 py-2 aboutUsBannerDescription workExperienceTxt">Techway Placements has been helping aspiring business analysts position themselves for job search and career success by enabling them to build relevant work experience in the sector and role. Integrated within the program are the latest concepts and techniques that are crucial for overcoming many of the challenges common to the BA sector and profession. We offer this opportunity in partnership with different companies as well as business analysis experts within and outside the UK. 
+                    <p class="pr-md-4 mr-md-1 py-2 aboutUsBannerDescription workExperienceTxt busAnlTxtCtrl">Techway Placements has been helping aspiring business analysts position themselves for job search and career success by enabling them to build relevant work experience in the sector and role. Integrated within the program are the latest concepts and techniques that are crucial for overcoming many of the challenges common to the BA sector and profession. We offer this opportunity in partnership with different companies as well as business analysis experts within and outside the UK. 
                     </p>
                 </div>
-                <div class="col-md-6  p-5 businessBannerRight">
+                <div class="col-md-6  p-4 p-md-5 businessBannerRight">
                     <h2 class="pr-md-4 mr-md-1 mt-4 mt-sm-0 text-center"> Request more Information </h2>
                     <form class="graduatesFromControl recruitersForm pt-5">
                         <div class="row pb-3">
@@ -126,7 +126,7 @@
             <div class="row ml-0">
                 <div class="partnerRecruiters">
                  <h1 class="text-center pt-md-5 mt-lg-5 mb-4">Program <span class="colorText"> Coverage </span></h1>
-                 <p class="text-center descriptionExtraReduce">As a candidate of the program, you will be working on a range of tasks and projects that are based on real business situations and data. This means you will be taking on a number of responsibilities designed to keep you engaged throughout the program while also building your BA skills and experience. Some of the key areas covered in the program include:
+                 <p class="text-center descriptionExtraReduce desExRedResCtrl">As a candidate of the program, you will be working on a range of tasks and projects that are based on real business situations and data. This means you will be taking on a number of responsibilities designed to keep you engaged throughout the program while also building your BA skills and experience. Some of the key areas covered in the program include:
                  </p>
  
                  <div class="row py-5">
@@ -236,20 +236,20 @@
             
             <div class="row ml-0">
                 <div class="partnerRecruiters">
-                 <h1 class="text-center pt-md-5 mt-lg-5 mb-4">Request more information</h1>
+                 <h1 class="text-center pt-4 pt-md-5 mt-lg-5 mb-4">Request more information</h1>
                  <p class="text-center">Request more information about this program. Complete the form below and we will get back to you soon. </p>
 
-                 <form class="graduatesFromControl recruitersForm pt-5 pb-5">
-                     <div class="row">
-                       <div class="col">
+                 <form class="graduatesFromControl recruitersForm pt-3 pd-md-5 pb-5">
+                     <div class="row busAnlFrm">
+                       <div class="col pb-2 pb-sm-0">
                          <input type="text" class="form-control" placeholder="First name" required>
                        </div>
                        <div class="col">
                          <input type="text" class="form-control" placeholder="Last name" required>
                        </div>
                      </div>
-                     <div class="row py-3">
-                        <div class="col">
+                     <div class="row py-2 py-md-3 busAnlFrm">
+                        <div class="col pb-2 pb-sm-0">
                             <input type="email" class="form-control" id="" placeholder="Email" required>
                         </div>
                         <div class="col">
@@ -276,7 +276,7 @@
         <div class="container extraMarginbyPadding px-3 px-sm-0">
             <div class="row py-lg-5">
                 <div class="col-md-5 bannerLeft">
-                    <h1 class="banner-title">
+                    <h1 class="banner-title busFooterTitle">
                         <span class="d-block">Choose <span class="colorText">Techway Placements</span> for </span>
                         <span class="d-block">better career prospects</span>
                     </h1>
