--- a/src/busnessAnalyst_1.html
+++ b/src/busnessAnalyst_1.html
@@ -115,32 +115,32 @@
                 <div class="partnerRecruiters">
                  <div class="row py-5">
                      <div class="col-12">
-                        <h2 class="pb-4">Tell us a bit more about your educational background?</h2>
+                        <h2 class="pb-4 busH2Res">Tell us a bit more about your educational background?</h2>
                         <p>We've all been there. You're looking for your first job, but you can't find one because you don't have experience. But, how do you get experience, if you don't have a job? It's a classic catch-22 that we seek to address here at  Techway Placements.
                         </p>
                         <p class="pt-3">We are redefining the way young people access the work experience they need to get the best possible start to their careers. By assigning them to work with industry expert mentors, candidates build valuable experience that will help them secure and sustain employment. </p>
 
-                        <h2 class="pt-5 pb-4">Why did you decide to get into Data Analysis? </h2>
+                        <h2 class="pt-5 pb-4 busH2Res">Why did you decide to get into Data Analysis? </h2>
                         <p>After my 3 years in the University of Bolton I realised although it’s a great passion of mine, it’s something I couldn’t see doing as a career. However, there was one aspect I really enjoyed which was the manipulation of data. There are some disciplines e.g. Biomechanics or Performance analysis within Sport science that’s heavily statistical analysis base and that’s what I really enjoyed doing hence why I’ve chose to go through the data analyst path.</p>
 
-                        <h2 class="pt-5 pb-4" >Why did you choose Techway Placements?</h2>
+                        <h2 class="pt-5 pb-4 busH2Res" >Why did you choose Techway Placements?</h2>
                         <p>I stumbled upon Techway Placement when I was job hunting. What caught my eyes were the two excellent service they provide which is they offer a guaranteed 3 months placement with a company within your field to gain experience, gain the relevant technical skills and also provide 1 to 1 support in improving your cv, preparing you for interviews and searching for job opportunities within your chosen city or town. Being a fresh graduate, zero experience and limited technical skills within the industry, working with Techway Placements was a no brainer.</p>
 
-                        <h2 class="pt-5 pb-4">What did you think about the experience at Techway Placements?</h2>
+                        <h2 class="pt-5 pb-4 busH2Res">What did you think about the experience at Techway Placements?</h2>
                         <div class="text-center pt-5 pb-4">
                             <img src="images/colorQuate.png" class="text-center img-fluid" alt="colorQuate">
                         </div>
                         <h1 class="text-center pt-4 pb-5">All the staffs I corresponded with were very helpful and friendly, they explained in-depth to me exactly what they do and the opportunity they can provide but most importantly they we’re very quick when getting back to me which I value a lot.</h1>
 
-                        <h2 class="pt-3 pb-5 mb-5">What was the highlight of the program?</h2>
+                        <h2 class="pt-3 pb-5 mb-5 busH2Res">What was the highlight of the program?</h2>
 
-                        <h2 class="pt-5 mt-5 pb-4">What impact do you think the program will have on your career?</h2>
+                        <h2 class="pt-5 mt-5 pb-4 busH2Res">What impact do you think the program will have on your career?</h2>
                         <p>Not only did program significantly boost my cv, it has also put me in a position where I can talk about my experience with more confidence because I knew I was getting first-hand experience within the industry which in result has led to me getting through multiple interviews stages for several companies. </p>
 
-                        <h2 class="pt-5 pb-4 mt-5">Where do you see yourself in five years’ time?</h2>
+                        <h2 class="pt-5 pb-4 mt-5 busH2Res">Where do you see yourself in five years’ time?</h2>
                         <p>I see myself as an experienced data analyst leading a team in my current company.</p>
 
-                        <h2 class="pt-5 pb-4 mt-5">What advice would you give to professionals looking to make a career change into Data Analysis? </h2>
+                        <h2 class="pt-5 pb-4 mt-5 busH2Res">What advice would you give to professionals looking to make a career change into Data Analysis? </h2>
                         <p class="mb-5 pb-5">I was in a sales role making hundreds of cold calls daily which I hated, I took a huge risk of leaving the company during unprecedented times and spent the next month and a half learning the technical skills and joined Techway Placement to gain some work experience within the industry. Fortunate for me I graduated doing sport science so I already had some transferable skills to help me learn quicker which allowed me to land my first job as a data analyst relatively quick. Nonetheless, wherever you are in life and data analyst is the path you want to take, it’s important you learned the technical skills needed e.g. SQL, Python, PowerBi/Tableau etc and team up with Techway Placement to also get work experience to place yourself in the best position in getting a job as a data analyst.</p>
                      </div>
                  </div>
@@ -188,7 +188,7 @@
         <div class="container extraMarginbyPadding px-3 px-sm-0">
             <div class="row py-lg-5">
                 <div class="col-md-5 bannerLeft">
-                    <h1 class="banner-title">
+                    <h1 class="banner-title busFooterTitle">
                         <span class="d-block">Choose <span class="colorText">Techway Placements</span> for </span>
                         <span class="d-block">better career prospects</span>
                     </h1>
