--- a/src/DataAnalysis.html
+++ b/src/DataAnalysis.html
@@ -66,14 +66,14 @@
                 <div class="col-md-6 employDownRight p-5 businessBannerLeft">
                     <h2 class="pr-md-4 mr-md-1 mt-4 mt-sm-0"><span class="colorText">Data Analysis</span> Work
                         <span class="d-block">Experience Program</span> </h2>
-                    <p class="pr-md-4 mr-md-1 py-2 aboutUsBannerDescription workExperienceTxt">Techway Placements actively helps young people in starting and building a career in data. We provide this program to equip them with in-demand work experience and skills that will allow them to distinguish themselves from other job seekers and make them an attractive candidate to employers. The program covers specialized concepts, technologies, techniques and skills for the booming field of data. We offer this opportunity in partnership with different companies as well as data analysis experts within and outside the UK.
+                    <p class="pr-md-4 mr-md-1 py-2 aboutUsBannerDescription workExperienceTxt busAnlTxtCtrl">Techway Placements actively helps young people in starting and building a career in data. We provide this program to equip them with in-demand work experience and skills that will allow them to distinguish themselves from other job seekers and make them an attractive candidate to employers. The program covers specialized concepts, technologies, techniques and skills for the booming field of data. We offer this opportunity in partnership with different companies as well as data analysis experts within and outside the UK.
                     </p>
                 </div>
                 <div class="col-md-6  p-5 businessBannerRight">
-                    <h2 class="pr-md-4 mr-md-1 mt-4 mt-sm-0 text-center"> Request more Information </h2>
+                    <h2 class="pr-md-4 mr-md-1 mt-md-4 mt-sm-0 text-center"> Request more Information </h2>
                     <form class="graduatesFromControl recruitersForm pt-5">
-                        <div class="row pb-3">
-                          <div class="col">
+                        <div class="row pb-3 d-block d-md-flex">
+                          <div class="col pb-3 pb-md-0">
                             <input type="text" class="form-control" placeholder="First name" required>
                           </div>
                           <div class="col">
@@ -126,7 +126,7 @@
             <div class="row ml-0">
                 <div class="partnerRecruiters">
                  <h1 class="text-center pt-md-5 mt-lg-5 mb-4">Program <span class="colorText"> Coverage </span></h1>
-                 <p class="text-center descriptionExtraReduce">As a candidate of the program, you will be working on a range of tasks and projects that are based on real-world data sets acquired from companies across sectors.  This gives you the chance to seriously perform varied data analysis functions throughout the program, which in turn will give you the experience, skills and confidece to tap into a career within sector. Some of the key areas covered in the program include:
+                 <p class="text-center descriptionExtraReduce desExRedResCtrl">As a candidate of the program, you will be working on a range of tasks and projects that are based on real-world data sets acquired from companies across sectors.  This gives you the chance to seriously perform varied data analysis functions throughout the program, which in turn will give you the experience, skills and confidece to tap into a career within sector. Some of the key areas covered in the program include:
                  </p>
  
                  <div class="row py-5">
@@ -247,36 +247,36 @@
             
             <div class="row ml-0">
                 <div class="partnerRecruiters">
-                 <h1 class="text-center pt-md-5 mt-lg-5 mb-4">Request more information</h1>
+                 <h1 class="text-center pt-md-5 mt-3 mt-lg-5 mb-4">Request more information</h1>
                  <p class="text-center">Request more information about this program. Complete the form below and we will get back to you soon. </p>
 
-                 <form class="graduatesFromControl recruitersForm pt-5 pb-5">
-                     <div class="row">
-                       <div class="col">
-                         <input type="text" class="form-control" placeholder="First name" required>
+                 <form class="graduatesFromControl recruitersForm pt-3 pd-md-5 pb-5">
+                    <div class="row busAnlFrm">
+                      <div class="col pb-2 pb-sm-0">
+                        <input type="text" class="form-control" placeholder="First name" required>
+                      </div>
+                      <div class="col">
+                        <input type="text" class="form-control" placeholder="Last name" required>
+                      </div>
+                    </div>
+                    <div class="row py-2 py-md-3 busAnlFrm">
+                       <div class="col pb-2 pb-sm-0">
+                           <input type="email" class="form-control" id="" placeholder="Email" required>
                        </div>
                        <div class="col">
-                         <input type="text" class="form-control" placeholder="Last name" required>
+                           <input type="text" class="form-control" id="" placeholder="Phone Number" required>
                        </div>
                      </div>
-                     <div class="row py-3">
-                        <div class="col">
-                            <input type="email" class="form-control" id="" placeholder="Email" required>
-                        </div>
-                        <div class="col">
-                            <input type="text" class="form-control" id="" placeholder="Phone Number" required>
-                        </div>
-                      </div>
-                      <div class="form-group form-check controlTikMark text-center">
-                       <small>
-                        <input type="checkbox" class="form-check-input" id="tik" required>
-                        <label class="form-check-label checkText" for="tik">Are you aware of the program fees?</label>
-                       </small>
-                      </div>
-                      <div class="graduateBtnControl d-flex justify-content-center">
-                         <button type="submit" class="btn mb-2 ml-3 graduatesBtn py-3 w-md-25">SEND REQUEST NOW</button>
-                      </div>
-                   </form>
+                     <div class="form-group form-check controlTikMark text-center">
+                      <small>
+                       <input type="checkbox" class="form-check-input" id="tik" required>
+                       <label class="form-check-label checkText" for="tik">Are you aware of the program fees?</label>
+                      </small>
+                     </div>
+                     <div class="graduateBtnControl d-flex justify-content-center">
+                        <button type="submit" class="btn mb-2 ml-3 graduatesBtn py-3 w-md-25">SEND REQUEST NOW</button>
+                     </div>
+                  </form>
              </div>
         </div>
     </section>
@@ -287,7 +287,7 @@
         <div class="container extraMarginbyPadding px-3 px-sm-0">
             <div class="row py-lg-5">
                 <div class="col-md-5 bannerLeft">
-                    <h1 class="banner-title">
+                    <h1 class="banner-title busFooterTitle">
                         <span class="d-block">Choose <span class="colorText">Techway Placements</span> for </span>
                         <span class="d-block">better career prospects</span>
                     </h1>
