--- a/src/MentorProfile.html
+++ b/src/MentorProfile.html
@@ -121,7 +121,7 @@
                       
                    </div>
                 </div>
-                <div class="col-md-7 mt-md-5 pl-md-5">
+                <div class="col-md-7 mt-3 mt-md-5 pl-md-5">
                     <img class="img-fluid" src="images/mentorBig.png" alt="mentor">
                 </div>
             </div>
@@ -192,7 +192,7 @@
         <div class="container extraMarginbyPadding px-3 px-sm-0">
             <div class="row py-lg-5">
                 <div class="col-md-5 bannerLeft">
-                    <h1 class="banner-title">
+                    <h1 class="banner-title busFooterTitle">
                         <span class="d-block">Choose <span class="colorText">Techway Placements</span> for </span>
                         <span class="d-block">better career prospects</span>
                     </h1>
