--- a/src/ContactUs.html
+++ b/src/ContactUs.html
@@ -64,7 +64,7 @@
             <div class="row employDown mt-lg-4 pt-md-4 aboutUs_1">
 
                 <div class="col-12 employDownRight mt-md-5  pr-md-5 text-center">
-                    <h2 class="pr-md-4 mr-md-1 mt-4 mt-sm-0 pb-4"><span class="colorText">Get in touch</span> with one of our <br> consultants.</h2>
+                    <h2 class="pr-md-4 mr-md-1 mt-4 mt-sm-0 pb-4 contactH1ctrl"><span class="colorText">Get in touch</span> with one of our <br> consultants.</h2>
                   <p>Complete the form or email or call us directly through the provided contact <br> details below:</p>
                     <!-- <button class="btn button mt-4">See prospective employees</button> -->
                 </div>
@@ -97,9 +97,9 @@
                                </div>
                            </div>
                         </div>
-                        <form class="graduatesFromControl pt-5 mt-5 pb-5 mb-5">
-                            <div class="row mt-4">
-                              <div class="col">
+                        <form class="graduatesFromControl pt-5 mt-md-5 pb-5 mb-5">
+                            <div class="row mt-4 d-block d-md-flex">
+                              <div class="col pb-3 pb-md-0">
                                 <input type="text" class="form-control" placeholder="First name" required>
                               </div>
                               <div class="col">
@@ -107,8 +107,8 @@
                               </div>
                             </div>
             
-                            <div class="row pt-3 pb-3">
-                                <div class="col">
+                            <div class="row pt-3 pb-3 d-block d-md-flex">
+                                <div class="col pb-3 pb-md-0">
                                   <input type="email" class="form-control" placeholder="Email Address" required>
                                 </div>
                                 <div class="col">
@@ -142,7 +142,7 @@
         <div class="container extraMarginbyPadding px-3 px-sm-0">
             <div class="row py-lg-5">
                 <div class="col-md-5 bannerLeft">
-                    <h1 class="banner-title">
+                    <h1 class="banner-title busFooterTitle">
                         <span class="d-block">Choose <span class="colorText">Techway Placements</span> for </span>
                         <span class="d-block">better career prospects</span>
                     </h1>
